--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "surveyjs-widgets",
+  "name": "@acrossthecloud/surveyjs-widgets",
   "version": "1.8.23",
   "scripts": {
     "start": "npm run build && live-server",
